--- a/chord/index2.html
+++ b/chord/index2.html
@@ -420,14 +420,18 @@ d3.json("matrix_pos.json", function(matrix_p) {
 */
       agg.append("text")
       .text("total tweets collected: "+(aggregate_data[0][0]+aggregate_data[0][1]))
-      .attr({x: sumtext, y: sumtop + sumdy})
-      .attr("font-weight","bold");
+      .attr({x: sumtext, y: sumtop})
+      .attr("font-weight","bold")
+      .attr("class", "header");
 
       agg.append("text")
       .text(aggregate_data[0][2]+" - "+aggregate_data[0][3])
-      .attr({x: sumtext, y: sumtop + sumdy*2});
+      .attr({x: sumtext, y: sumtop + sumdy});
 
-     //overall neg/pos portions 
+     //overall neg/pos portions
+      agg.append("text").text(formatPercent0(aggregate_data[0][0]/(aggregate_data[0][0]+aggregate_data[0][1]))).attr({x: sumtext, y: sumtop + sumdy*3 - 6});
+      agg.append("text").text(formatPercent0(aggregate_data[0][1]/(aggregate_data[0][0]+aggregate_data[0][1]))).attr({x: boxw-10, y: sumtop + sumdy*3 - 6}).attr("text-anchor", "end");
+
       agg.append("rect")
         .attr({ x: sumtext, y: sumtop + sumdy*3, height: 12, fill: "red" })
         .attr("width", (aggregate_data[0][0]/(aggregate_data[0][0]+aggregate_data[0][1]))*(boxw-20) - 1);
@@ -435,7 +439,7 @@ d3.json("matrix_pos.json", function(matrix_p) {
       agg.append("rect")
         .attr({ y: sumtop + sumdy*3, height: 12, fill: "green" })
         .attr("x", sumtext + (aggregate_data[0][0]/(aggregate_data[0][0]+aggregate_data[0][1]))*(boxw-20) + 1)
-        .attr("width", (aggregate_data[0][1]/(aggregate_data[0][0]+aggregate_data[0][1]))*(boxw-20) - 1);      
+        .attr("width", (aggregate_data[0][1]/(aggregate_data[0][0]+aggregate_data[0][1]))*(boxw-20) - 1);
 
 
       agg.append("text")
@@ -636,7 +640,7 @@ var coverbox2 = d3.select(".mastersvg")
         .data(layout.chords)
       .enter().append("path")
         .attr("class", "chord")
-        .style("fill", function(d) { return fill[d.source.index]; })
+        .style("fill", function(d) { return fill[d.target.index]; })
         .attr("d", path)
         .style("opacity", function (d) { return d3.round(0.35-sent_matrix_neg[d.source.index][d.target.index], 2); });
 
@@ -644,7 +648,7 @@ var coverbox2 = d3.select(".mastersvg")
         .data(layout2.chords)
       .enter().append("path")
         .attr("class", "chord")
-        .style("fill", function(d) { return fill[d.source.index]; })
+        .style("fill", function(d) { return fill[d.target.index]; })
         .attr("d", path)
         .style("opacity", function (d) { return d3.round(0.35+sent_matrix_pos[d.source.index][d.target.index], 2); });
 
