make links and handles linkable

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
   <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.24/themes/smoothness/jquery-ui.css">
   <script src="js/ChattyCitySolr.js"></script>
+  <script src="js/Autolinker.min.js"></script>
   <script src="core/Core.js"></script>
   <script src="core/AbstractManager.js"></script>
   <script src="managers/Manager.jquery.js"></script>
