--- a/chord/index2.html
+++ b/chord/index2.html
@@ -84,7 +84,7 @@
       sumtext = 10,
       sumdy = 15,
       sumcityleft = sumtext+100,
-  var sumcitypartwidth = 90;
+      sumcitypartwidth = 90;
 
   var formatPercent0 = d3.format(".0%"),
       formatPercent1 = d3.format(".1%"),
@@ -774,7 +774,7 @@
   function wrap(text, width) {
 
     text.each(function() {
-      
+
       var text = d3.select(this),
           words = text.text().split(/\s+/).reverse(),
           word,
