--- a/chord/index2.html
+++ b/chord/index2.html
@@ -2,12 +2,25 @@
 <meta charset="utf-8">
 <style>
 
+  #tooltip {
+    color: white;
+    opacity: .9;
+    background: #333;
+    padding: 5px;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+    position: absolute;
+    z-index: 10;
+    visibility: hidden;
+    white-space: nowrap;
+    pointer-events: none;
+  }
+
   body {
     font: 11px sans-serif;
   }
 
   path.chord {
-    /*fill-opacity: .67;*/
     stroke: #000;
     stroke-width: .1px;
   }
@@ -60,7 +73,7 @@
 </style>
 
 <body>
-
+<div id = "tooltip"></div>
 <script src="d3.min.js"></script>
 <script>
 
@@ -95,12 +108,12 @@
       .outerRadius(outerRadius);
 
   var layout = d3.layout.chord()
-      .padding(.005)
+      .padding(.01)
       .sortSubgroups(d3.descending)
       .sortChords(d3.ascending);
 
   var layout2 = d3.layout.chord()
-      .padding(.005)
+      .padding(.01)
       .sortSubgroups(d3.descending)
       .sortChords(d3.ascending);
 
@@ -122,7 +135,7 @@
   svgp.append("text")
     .text("negative")
     .attr({
-      x: ((width / 2)+boxw),
+      x: ((width / 2) + boxw),
       y: 55,
       class: "underlay"
     })
@@ -131,7 +144,7 @@
   svgp.append("text")
     .text("positive")
     .attr({
-      x: ((width*3)/2 + boxw),
+      x: ((width * 3) / 2 + boxw),
       y: 55,
       class: "underlay"
     })
@@ -145,7 +158,7 @@
   var svg2 = svgp
     .append("g")
     .attr("class", "circle")
-    .attr("transform", "translate(" + ((width*3)/2 + boxw) + "," + ((height / 2) + 36) + ")");
+    .attr("transform", "translate(" + ((width * 3) / 2 + boxw) + "," + ((height / 2) + 36) + ")");
 
   svg.append("circle")
     .attr("r", outerRadius);
@@ -235,7 +248,7 @@
                   .attr("x", 0)
                   .attr("y", 0)
                   .attr("width", boxw)
-                  .attr("height", sumtop-25)
+                  .attr("height", sumtop - 25)
                   .attr("fill", "grey")
                   .attr("fill-opacity",0.1);
 
@@ -381,7 +394,7 @@
 
                   // legend text
 
-                  legtext3 = "The color of each path corresponds to the city that talks more about the other. The more opaque a path is, the stronger the average sentiment of tweets among the cities it links."
+                  legtext3 = "The color of each path corresponds to the source city. The more opaque a path is, the stronger the average sentiment of tweets among the cities it links."
 
                   svgp.append("text")
                     .text(legtext3)
@@ -404,7 +417,7 @@
                     .append("g");
 
                   agg.append("text")
-                    .text("total tweets collected: "+formatComma(aggregate_data[0][0]+aggregate_data[0][1]))
+                    .text("total tweets depicted: "+formatComma(aggregate_data[0][0]+aggregate_data[0][1]))
                     .attr({x: sumtext, y: sumtop})
                     .attr("font-weight","bold")
                     .attr("class", "header");
@@ -591,15 +604,16 @@
                         .enter()
                         .append("g")
                         .attr("class", "group")
-                        .on("mouseover", fade(0));
+                        .on("mouseover", fade());
 
                   var group2 = svg2.selectAll(".group")
                         .data(layout2.groups)
                         .enter()
                         .append("g")
                         .attr("class", "group")
-                        .on("mouseover", fade(1));
+                        .on("mouseover", fade());
 
+/*
                   // Add a mouseover title.
                   group.append("title")
                     .text(function(d, i) {
@@ -611,7 +625,7 @@
                       return city[i].name + ": " + formatPercent1(d.value) + " of all positive tweets";
                     });
 
-
+*/
                   // Add the group arc.
                   var groupPath = group.append("path")
                         .attr("id", function(d, i) { return "group" + i; })
@@ -626,7 +640,7 @@
 
                   var extend_arc = d3.svg.arc()
                         .innerRadius(outerRadius)
-                        .outerRadius(outerRadius+50);
+                        .outerRadius(outerRadius + 50);
 
 
                   //proximity detection for hover
@@ -658,7 +672,7 @@
                         .attr("d", path)
                         .style("opacity", function (d) { return d3.round(0.35+sent_matrix_pos[d.source.index][d.target.index], 2); });
 
-
+/*
                   // Add a mouseover title for each chord.
                   chord.append("title").text(function(d) {
                     return city[d.source.index].name
@@ -674,6 +688,7 @@
                         + "avg. sentiment score: " + d3.round(sent_matrix_neg[d.target.index][d.source.index], 2);
                   });
 
+
                   chord2.append("title").text(function(d) {
                     return city[d.source.index].name
                         + " → " + city[d.target.index].name
@@ -687,7 +702,55 @@
                         + "\n"
                         + "avg. sentiment score: " + d3.round(sent_matrix_pos[d.target.index][d.source.index], 2);
                   });
+*/
+                  chord.on("mouseover", function (d) {
+                  d3.select("#tooltip")
+                    .style("visibility", "visible")
+                    .html(chordTip(d, 1))
+                    .style("top", function () { return (d3.event.pageY - 70)+"px"})
+                    .style("left", function () { return (d3.event.pageX - 140)+"px";})
+                  })
+                    .on("mouseout", function (d) { d3.select("#tooltip").style("visibility", "hidden") });
 
+                  chord2.on("mouseover", function (d) {
+                  d3.select("#tooltip")
+                    .style("visibility", "visible")
+                    .html(chordTip(d, 2))
+                    .style("top", function () { return (d3.event.pageY - 70)+"px"})
+                    .style("left", function () { return (d3.event.pageX - 140)+"px";})
+                  })
+                    .on("mouseout", function (d) { d3.select("#tooltip").style("visibility", "hidden") });
+
+                  function chordTip (d, cgroup) {
+                    if (cgroup == 1){
+                        return city[d.source.index].name
+                        + " → " + city[d.target.index].name
+                        + ": " + formatPercent1(d.source.value)
+                        + "<br />"
+                        + "avg. sentiment: " + d3.round(sent_matrix_neg[d.source.index][d.target.index], 2)
+                        + "<br />"
+                        + city[d.target.index].name
+                        + " → " + city[d.source.index].name
+                        + ": " + formatPercent1(d.target.value)
+                        + "<br />"
+                        + "avg. sentiment: " + d3.round(sent_matrix_neg[d.target.index][d.source.index], 2);
+                    }
+                    else {
+                      return city[d.source.index].name
+                          + " → " + city[d.target.index].name
+                          + ": " + formatPercent1(d.source.value)
+                          + "<br />"
+                          + "avg. sentiment: " + d3.round(sent_matrix_pos[d.source.index][d.target.index], 2)
+                          + "<br />"
+                          + city[d.target.index].name
+                          + " → " + city[d.source.index].name
+                          + ": " + formatPercent1(d.target.value)
+                          + "<br />"
+                          + "avg. sentiment: " + d3.round(sent_matrix_pos[d.target.index][d.source.index], 2);
+                    }
+                  }
+
+                  //add ticks and labels
                   var ticks = group.selectAll("g")
                         .data(groupTicks)
                         .enter()
@@ -709,7 +772,8 @@
                     .attr("dy", ".35em")
                     .attr("transform", function(d) { return d.angle > Math.PI ? "rotate(180)translate(-16)" : null; })
                     .style("text-anchor", function(d) { return d.angle > Math.PI ? "end" : null; })
-                    .text(function(d) { return d.label; });
+                    .text(function(d) { return d.label; })
+                    .attr("opacity", function(d) { return d.opa1 });
 
 
                   var ticks2 = group2.selectAll("g")
@@ -733,23 +797,33 @@
                     .attr("dy", ".35em")
                     .attr("transform", function(d) { return d.angle > Math.PI ? "rotate(180)translate(-16)" : null; })
                     .style("text-anchor", function(d) { return d.angle > Math.PI ? "end" : null; })
-                    .text(function(d) { return d.label; });
+                    .text(function(d) { return d.label; })
+                    .attr("opacity", function(d) { return d.opa2 });
 
 
                   // Returns an array of tick angles and labels, given a group.
                   function groupTicks(d) {
                     var k = (d.endAngle - d.startAngle) / 2;
+                    var o1 = 1,
+                        o2 = 1;
+                    
+                    if (city[d.index].name == "lincoln" || city[d.index].name == "sacramento") { o1 = 0;}
+                    if (city[d.index].name == "lincoln") { o2 = 0;}
+                    
                     return d3.range(1).map(function(v, i) {
                       return {
                         angle: k + d.startAngle,
-                        label: city[d.index].name
+                        label: city[d.index].name,
+                        opa1: o1,
+                        opa2: o2
                       };
                     });
                   }
 
 
                   // Returns an event handler for fading a given chord group.
-                  function fade(negpos) {
+                  function fade() {
+
                     return function(g, i) {
                         chord.classed("fade", function(p) { return p.source.index != i && p.target.index != i; });
                         chord2.classed("fade", function(p) { return p.source.index != i && p.target.index != i; });
@@ -772,7 +846,6 @@
   }
 
   function wrap(text, width) {
-
     text.each(function() {
 
       var text = d3.select(this),
